online-food-order/deployment-kubernetes/kube-manifests/13-kafka-cluster.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
