online-food-order/deployment-kubernetes/kube-manifests/02-security-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-service
  labels:
    app: security-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: security-service
  template:
    metadata:
      labels:
        app: security-service
    spec:
      containers:
        - name: security-service
          image: satheeshkumart50/security-service:1.0.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: security-service
spec:
  type: NodePort
  selector:
    app: security-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30002
