online-food-order/deployment-kubernetes/kube-manifests/03-db-external-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-externalname-service
spec:
  type: ExternalName
  externalName: 
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-externalname-service
spec:
  type: ExternalName
  externalName:
