online-food-order/deployment-kubernetes/kube-manifests/03-user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: satheeshkumart50/user-service:1.0.0
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
      nodePort: 30003
