online-food-order/deployment-kubernetes/kube-manifests/04-restaurant-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-service
  template:
    metadata:
      labels:
        app: restaurant-service
    spec:
      containers:
        - name: restaurant-service
          image: satheeshkumart50/restaurant-service:1.0.0
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  type: NodePort
  selector:
    app: restaurant-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30004
