online-food-order/deployment-kubernetes/kube-manifests/05-search-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
        - name: search-service
          image: satheeshkumart50/search-service:1.0.0
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  type: NodePort
  selector:
    app: search-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30005
