online-food-order/deployment-kubernetes/kube-manifests/06-order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: satheeshkumart50/order-service:1.0.0
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: NodePort
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
      nodePort: 30006
