online-food-order/deployment-kubernetes/kube-manifests/07-payment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: satheeshkumart50/payment-service:1.0.0
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: NodePort
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
      nodePort: 30007
