online-food-order/deployment-kubernetes/kube-manifests/08-review-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
    spec:
      containers:
        - name: review-service
          image: satheeshkumart50/review-service:1.0.0
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: review-service
spec:
  type: NodePort
  selector:
    app: review-service
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
      nodePort: 30008
